[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygit"
version = "0.1.0"
description = "Custom git implementation"

dependencies = [
    "typer==0.12.3"
]

[project.scripts]
pygit = "pygit.cli:main"

[options.packages.find]
where = "src"

# Testing

